--- a/src/sass/partials/_contacts.scss
+++ b/src/sass/partials/_contacts.scss
@@ -15,6 +15,7 @@
 }
 .contacts {
   background-color: #84a178;
+  position: relative;
   list-style: none;
 
   &__wrapper {
@@ -53,19 +54,25 @@
     }
   }
   &__list {
+    position: absolute;
+    top: -353px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 16px;
+    list-style: none;
+    padding-left: 0;
 
     @include tablet {
       display: flex;
       flex-direction: row;
       gap: 16px;
+      top: -299px;
     }
     @include desktop {
       flex-direction: row;
       gap: 32px;
+      top: -128px;
     }
   }
   &__item {
@@ -92,14 +99,20 @@
   }
 }
 .address {
-  width: 190px;
+  width: auto;
   height: 70px;
   margin-bottom: 24px;
 
   @include tablet {
     margin-bottom: 32px;
-  }
 
+    height: 71px;
+  }
+  @include desktop {
+    margin-bottom: 32px;
+
+    height: 50px;
+  }
   &__header {
     font-family: Montserrat;
     font-size: 12px;
@@ -111,6 +124,17 @@
     font-size: 12px;
     color: #d6936d;
     text-decoration: none;
+    @include tablet {
+      font-size: 14px;
+      line-height: 1.83;
+      letter-spacing: 0.04em;
+      font-weight: 500;
+    }
+    @include desktop {
+      font-size: 16px;
+      letter-spacing: 0.04em;
+      line-height: 1.83;
+    }
   }
 }
 
