--- a/src/partials/contacts.html
+++ b/src/partials/contacts.html
@@ -11,6 +11,11 @@
           <li class="contacts__days">Monday - Friday<br /><span class="contacts__hours">06:00 AM - 10:00 PM</span></li>
           <li class="contacts__days">Saturday - Sunday<br /><span class="contacts__hours">08:00 AM - 16:00 PM</span></li>
         </ul>
+        <div class="contacts__line"></div>
+        <ul class="contacts__touch">
+          <li><a class="contacts__link" href="tel:+61(0)383766284">+61(0) 383 766 284</a></li>
+          <li><a class="contacts__link" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
+        </ul>
 
       </li>
       <li class="contacts__item">
@@ -22,6 +27,11 @@
          <ul class="contacts__opening">
           <li class="contacts__days">Monday - Friday<br /><span class="contacts__hours">06:00 AM - 10:00 PM</span></li>
           <li class="contacts__days">Saturday - Sunday<br /><span class="contacts__hours">08:00 AM - 16:00 PM</span></li>
+        </ul>
+        <div class="contacts__line"></div>
+         <ul class="contacts__touch">
+          <li><a class="contacts__link" href="tel:+61(0)383766284">+61(0) 383 766 284</a></li>
+          <li><a class="contacts__link" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
         </ul>
 
 
@@ -37,6 +47,10 @@
           <li class="contacts__days">Saturday - Sunday<br /><span class="contacts__hours">08:00 AM - 16:00 PM</span></li>
         </ul>
         <div class="contacts__line"></div>
+         <ul class="contacts__touch">
+          <li><a class="contacts__link" href="tel:+61(0)383766284">+61(0) 383 766 284</a></li>
+          <li><a class="contacts__link" href="mailto:noreply@envato.com">noreply@envato.com</a></li>
+        </ul>
         </li>
    </ul>
 
