--- a/src/sass/partials/_contacts.scss
+++ b/src/sass/partials/_contacts.scss
@@ -61,7 +61,7 @@
     align-items: center;
     gap: 16px;
     list-style: none;
-    padding-left: 0;
+    padding: 0 15px;
 
     @include tablet {
       display: flex;
@@ -106,6 +106,13 @@
     border: 0.4 solid #e1e1e1;
     margin-bottom: 24px;
     text-align: left;
+
+    @include tablet {
+      margin-bottom: 32px;
+    }
+    @include desktop {
+      margin-bottom: 32px;
+    }
   }
   &__days {
     font-size: 12px;
@@ -117,6 +124,17 @@
     line-height: 1.86;
     color: #ababab;
   }
+  &__touch {
+    list-style: none;
+    padding-left: 0;
+  }
+  &__link {
+    text-decoration: none;
+    color: $textBlack;
+    font-size: 12px;
+    line-height: 1.6;
+    font-weight: 600;
+  }
 }
 .address {
   width: auto;
@@ -125,7 +143,6 @@
 
   @include tablet {
     margin-bottom: 32px;
-
     height: 71px;
   }
   @include desktop {
